--- a/codigo/modulos/comercial/Comercial/Capa_Vista_Modulo_Comercial/Capa_Vista_Modulo_Comercial.csproj
+++ b/codigo/modulos/comercial/Comercial/Capa_Vista_Modulo_Comercial/Capa_Vista_Modulo_Comercial.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
+
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
@@ -22,6 +23,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
@@ -30,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+
   <ItemGroup>
     <Reference Include="Capa_Controlador_Modulo_Comercial">
       <HintPath>..\Capa_Controlador_Modulo_Comercial\bin\Debug\Capa_Controlador_Modulo_Comercial.dll</HintPath>
@@ -45,6 +48,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
+
   <ItemGroup>
     <Compile Include="Frm_Compras_Periodo.cs">
       <SubType>Form</SubType>
@@ -52,86 +56,98 @@
     <Compile Include="Frm_Compras_Periodo.Designer.cs">
       <DependentUpon>Frm_Compras_Periodo.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Cuentas_Por_Cobrar.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Cuentas_Por_Cobrar.Designer.cs">
       <DependentUpon>Frm_Cuentas_Por_Cobrar.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Envio_Contabilidad.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Envio_Contabilidad.Designer.cs">
       <DependentUpon>Frm_Envio_Contabilidad.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Factura.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Factura.Designer.cs">
       <DependentUpon>Frm_Factura.cs</DependentUpon>
     </Compile>
-<<<<<<< Updated upstream
+
     <Compile Include="Frm_Factura_Proveedor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Factura_Proveedor.Designer.cs">
       <DependentUpon>Frm_Factura_Proveedor.cs</DependentUpon>
-=======
+    </Compile>
+
     <Compile Include="Frm_Factura_Principal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Factura_Principal.Designer.cs">
       <DependentUpon>Frm_Factura_Principal.cs</DependentUpon>
->>>>>>> Stashed changes
     </Compile>
+
     <Compile Include="Frm_Inventario.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Inventario.Designer.cs">
       <DependentUpon>Frm_Inventario.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Inventario_Historico.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Inventario_Historico.Designer.cs">
       <DependentUpon>Frm_Inventario_Historico.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Notas_Debito_Credito.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Notas_Debito_Credito.Designer.cs">
       <DependentUpon>Frm_Notas_Debito_Credito.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Compras.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Compras.Designer.cs">
       <DependentUpon>Frm_Compras.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Nota_CreditoDebito.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Nota_CreditoDebito.Designer.cs">
       <DependentUpon>Frm_Nota_CreditoDebito.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Orden_Compra.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Orden_Compra.Designer.cs">
       <DependentUpon>Frm_Orden_Compra.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Poliza_Comercial_Reportes.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Poliza_Comercial_Reportes.Designer.cs">
       <DependentUpon>Frm_Poliza_Comercial_Reportes.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Frm_Recibos_Huespedes.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Recibos_Huespedes.Designer.cs">
       <DependentUpon>Frm_Recibos_Huespedes.cs</DependentUpon>
     </Compile>
+
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -139,56 +155,69 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+
   <ItemGroup>
     <EmbeddedResource Include="Frm_Compras_Periodo.resx">
       <DependentUpon>Frm_Compras_Periodo.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Cuentas_Por_Cobrar.resx">
       <DependentUpon>Frm_Cuentas_Por_Cobrar.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Envio_Contabilidad.resx">
       <DependentUpon>Frm_Envio_Contabilidad.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Factura.resx">
       <DependentUpon>Frm_Factura.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< Updated upstream
+
     <EmbeddedResource Include="Frm_Factura_Proveedor.resx">
       <DependentUpon>Frm_Factura_Proveedor.cs</DependentUpon>
-=======
+    </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Factura_Principal.resx">
       <DependentUpon>Frm_Factura_Principal.cs</DependentUpon>
->>>>>>> Stashed changes
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Inventario.resx">
       <DependentUpon>Frm_Inventario.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Inventario_Historico.resx">
       <DependentUpon>Frm_Inventario_Historico.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Notas_Debito_Credito.resx">
       <DependentUpon>Frm_Notas_Debito_Credito.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Compras.resx">
       <DependentUpon>Frm_Compras.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Nota_CreditoDebito.resx">
       <DependentUpon>Frm_Nota_CreditoDebito.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Orden_Compra.resx">
       <DependentUpon>Frm_Orden_Compra.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Poliza_Comercial_Reportes.resx">
       <DependentUpon>Frm_Poliza_Comercial_Reportes.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Frm_Recibos_Huespedes.resx">
       <DependentUpon>Frm_Recibos_Huespedes.cs</DependentUpon>
     </EmbeddedResource>
+
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
