--- a/codigo/modulos/comercial/MVC_Compras/Capa_Controlador_Compras/Capa_Controlador_Compras.csproj
+++ b/codigo/modulos/comercial/MVC_Compras/Capa_Controlador_Compras/Capa_Controlador_Compras.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cls_Controlador_Compras.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
