--- a/codigo/modulos/comercial/MVC_Facturas/Capa_Modelo_Facturas/Capa_Modelo_Facturas.csproj
+++ b/codigo/modulos/comercial/MVC_Facturas/Capa_Modelo_Facturas/Capa_Modelo_Facturas.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cls_Conexion.cs" />
+    <Compile Include="Cls_Sentencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
