--- a/codigo/modulos/comercial/MVC_CxP/Capa_Vista_CxP/Capa_Vista_CxP.csproj
+++ b/codigo/modulos/comercial/MVC_CxP/Capa_Vista_CxP/Capa_Vista_CxP.csproj
@@ -36,6 +36,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frm_CxP_Gestiòn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_CxP_Gestiòn.Designer.cs">
+      <DependentUpon>Frm_CxP_Gestiòn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_CxP_navegación.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_CxP_navegación.Designer.cs">
+      <DependentUpon>Frm_CxP_navegación.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Frm_CxP_Gestiòn.resx">
+      <DependentUpon>Frm_CxP_Gestiòn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_CxP_navegación.resx">
+      <DependentUpon>Frm_CxP_navegación.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
