--- a/codigo/modulos/comercial/MVC_CxC/Capa_Vista_CxC/Capa_Vista_CxC.csproj
+++ b/codigo/modulos/comercial/MVC_CxC/Capa_Vista_CxC/Capa_Vista_CxC.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Frm_AplicarPago.resx">
+      <DependentUpon>Frm_AplicarPago.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_Recibos.resx">
       <DependentUpon>Frm_Recibos.cs</DependentUpon>
     </EmbeddedResource>
