--- a/codigo/modulos/comercial/MVC_Compras/Capa_Modelo_Compras/Capa_Modelo_Compras.csproj
+++ b/codigo/modulos/comercial/MVC_Compras/Capa_Modelo_Compras/Capa_Modelo_Compras.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cls_Conexion.cs" />
+    <Compile Include="Cls_Modelo_EnvioContabilidad.cs" />
+    <Compile Include="Cls_Modelo_OrdenCompra.cs" />
+    <Compile Include="Cls_Modelo_Proveedor.cs" />
     <Compile Include="Cls_Sentencias_SQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
