Solucionando e Implementando Modulo Comercial

--- a/codigo/modulos/comercial/MVC_Inventario/Capa_Vista_Inventario/Capa_Vista_Inventario.csproj
+++ b/codigo/modulos/comercial/MVC_Inventario/Capa_Vista_Inventario/Capa_Vista_Inventario.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Capa_Controlador_Inventario">
       <HintPath>..\Capa_Controlador_Inventario\bin\Debug\Capa_Controlador_Inventario.dll</HintPath>
     </Reference>
+    <Reference Include="Capa_Vista_Compras">
+      <HintPath>..\..\MVC_Compras\Capa_Vista_Compras\bin\Debug\Capa_Vista_Compras.dll</HintPath>
+    </Reference>
     <Reference Include="Capa_Vista_CxC">
       <HintPath>..\..\MVC_CxC\Capa_Vista_CxC\bin\Debug\Capa_Vista_CxC.dll</HintPath>
     </Reference>
