--- a/codigo/modulos/comercial/MVC_Facturas/Capa_Controlador_Facturas/Capa_Controlador_Facturas.csproj
+++ b/codigo/modulos/comercial/MVC_Facturas/Capa_Controlador_Facturas/Capa_Controlador_Facturas.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cls_Controlador.cs" />
+    <Compile Include="Cls_Guardar_Factura.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
